app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowflake-deployment
  annotations:
    kubernetes.io/change-cause: "Update to x.y.z"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: snowflake-id-generator
  strategy:
   type: RollingUpdate
   rollingUpdate:
    maxUnavailable: 25%
    maxSurge: 25%
  template:
    metadata:
      labels:
        app: snowflake-id-generator
    spec:
      containers:
        - name: snowflake-pod
          image: snowflake:1.3
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: snowflake-config-volume
              mountPath: /config
              readOnly: true
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
      volumes:
        - name: snowflake-config-volume
          configMap:
            name: snowflake-config
            items:
              - key: application.properties
                path: application.properties
